zDoc/zTRY.sort.txt
zTRY.sort.txt

C:\amsrc\rmtry>git commit -m "GRN. Renamed Pennies to Money, and it uses Dolla
rs unless specified. Cleanup of specs."
[master f7b47ca] GRN. Renamed Pennies to Money, and it uses Dollars unless specified. Cleanup of specs.
 10 files changed, 351 insertions(+), 265 deletions(-)
 rename lib/{pennies.rb => money.rb} (88%)
 create mode 100644 spec/lib/money_spec.rb
 delete mode 100644 spec/lib/pennies_spec.rb

C:\amsrc\rmtry>irb
irb(main):001:0> class Aa
irb(main):002:1> initialize
irb(main):003:1> @val=1
irb(main):004:1> end
TypeError: already initialized class
        from (irb):2:in `initialize'
        from (irb):2:in `<class:Aa>'
        from (irb):1
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):005:0> class Aa
irb(main):006:1> def initialize
irb(main):007:2> @val=1
irb(main):008:2> end
irb(main):009:1> end
=> nil
irb(main):010:0> x=Aa.new
=> #<Aa:0x249ff30 @val=1>
irb(main):011:0> x.val
NoMethodError: undefined method `val' for #<Aa:0x249ff30 @val=1>
        from (irb):11
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):012:0> x.@val
SyntaxError: (irb):12: syntax error, unexpected tIVAR
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):013:0> x.:val
SyntaxError: (irb):13: syntax error, unexpected tSYMBEG
x.:val
   ^
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):014:0> x:val
SyntaxError: (irb):14: syntax error, unexpected ':', expecting $end
x:val
  ^
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):015:0> class Aa
irb(main):016:1> attr_reader :val
irb(main):017:1> def initialize
irb(main):018:2> @val=2
irb(main):019:2> end
irb(main):020:1> end
=> nil
irb(main):021:0> x=Aa.new
=> #<Aa:0x2498358 @val=2>
irb(main):022:0> x.val
=> 2
irb(main):023:0> l=['a','b','b','c','a']
=> ["a", "b", "b", "c", "a"]
irb(main):024:0> l.uniq
=> ["a", "b", "c"]
irb(main):025:0> l=['z','a','b','b','c','a']
=> ["z", "a", "b", "b", "c", "a"]
irb(main):026:0> l.uniq
=> ["z", "a", "b", "c"]
irb(main):027:0> l.uniq.sort
=> ["a", "b", "c", "z"]
irb(main):028:0> m = l.uniq.sort.^C
irb(main):028:0>
irb(main):029:0*
irb(main):030:0* w
NameError: undefined local variable or method `w' for main:Object
        from (irb):30
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):031:0> a = [ "a", "b", "c", "d" ]
=> ["a", "b", "c", "d"]
irb(main):032:0> a.collect { |x| x + "!" }        #=> ["a!", "b!", "c!", "d!"]
=> ["a!", "b!", "c!", "d!"]
irb(main):033:0> a.map.with_index{ |x, i| x * i } #=> ["", "b", "cc", "ddd"]
=> ["", "b", "cc", "ddd"]
irb(main):034:0> a                                #=> ["a", "b", "c", "d"]
=> ["a", "b", "c", "d"]
irb(main):035:0>
irb(main):036:0* b = l.collect{|i| "#{i}=>0"}
=> ["z=>0", "a=>0", "b=>0", "b=>0", "c=>0", "a=>0"]
irb(main):037:0> b = l.uniq.sort.collect{|i| "#{i}=>0"}
=> ["a=>0", "b=>0", "c=>0", "z=>0"]
irb(main):038:0> b = (l.uniq.sort).collect{|i| "#{i}=>0"}
=> ["a=>0", "b=>0", "c=>0", "z=>0"]
irb(main):039:0> l
=> ["z", "a", "b", "b", "c", "a"]
irb(main):040:0> b
=> ["a=>0", "b=>0", "c=>0", "z=>0"]
irb(main):041:0> b2 = l.each{|i| b[i]=b[i]+1 }
TypeError: can't convert String into Integer
        from (irb):41:in `[]'
        from (irb):41:in `block in irb_binding'
        from (irb):41:in `each'
        from (irb):41
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):042:0>  l.each{|i| b[i]=b[i]+1 }
TypeError: can't convert String into Integer
        from (irb):42:in `[]'
        from (irb):42:in `block in irb_binding'
        from (irb):42:in `each'
        from (irb):42
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):043:0> b[1]
=> "b=>0"
irb(main):044:0> b = (l.uniq.sort).collect{|i| Hash.new(#{i}=>0})}
irb(main):045:2* q
irb(main):046:2> r='aId'
irb(main):047:2> Hash.new(r => 0)
irb(main):048:2> s = Hash.new(r => 0)
irb(main):049:2> s
irb(main):050:2> s.to_s
irb(main):051:2> H = Hash["a" => 100, "b" => 200]
irb(main):052:2>
irb(main):053:2* puts "#{H['a']}"
irb(main):054:2> puts "#{H['b']}"
irb(main):055:2> print(#{H['a']})
irb(main):056:3*
irb(main):057:3* q
irb(main):058:3> print(H['a'])
irb(main):059:3> H['a']
irb(main):060:3> H = Hash["a" => 100, "b" => 200]
irb(main):061:3> H['a'].to_s
irb(main):062:3> H["a"].to_s
irb(main):063:3> H = Hash,new["a" => 100, "b" => 200]
irb(main):064:3> H["a"].to_s
irb(main):065:3>
irb(main):066:3* q
irb(main):067:3> months = Hash.new( "month" )
irb(main):068:3>
irb(main):069:3* months = {"1" => "January", "2" => "February"}
irb(main):070:3>
irb(main):071:3* keys = months.keys
irb(main):072:3>
irb(main):073:3* puts "#{keys}"
irb(main):074:3>
irb(main):075:3* q
irb(main):076:3> Hash["a", 100, "b", 200]             #=> {"a"=>100, "b"=>200}
irb(main):077:3> Hash[ [ ["a", 100], ["b", 200] ] ]   #=> {"a"=>100, "b"=>200}
irb(main):078:3> Hash["a" => 100, "b" => 200]         #=> {"a"=>100, "b"=>200}
irb(main):079:3> Hash["a" => 100, "b" => 200].to_s
irb(main):080:3> print(Hash["a" => 100, "b" => 200])
irb(main):081:3> print ('a')
irb(main):082:3> h1 = Hash["a"=>1, "b"=>2]
irb(main):083:3> h1["a"]
irb(main):084:3> quit
irb(main):085:3> ^C
irb(main):085:0> exit
Terminate batch job (Y/N)? n

C:\amsrc\rmtry>irb
irb(main):001:0> h1 = Hash["a"=>1, "b"=>2]
=> {"a"=>1, "b"=>2}
irb(main):002:0> h1 = Hash["b"=>20, "z"=>3, "a"=>1]
=> {"b"=>20, "z"=>3, "a"=>1}
irb(main):003:0> h1 = Hash["a"=>1, "b"=>2]
=> {"a"=>1, "b"=>2}
irb(main):004:0> h2 = Hash["b"=>20, "z"=>3, "a"=>1]
=> {"b"=>20, "z"=>3, "a"=>1}
irb(main):005:0> h3 = h1.merge(h2)
=> {"a"=>1, "b"=>20, "z"=>3}
irb(main):006:0> h3 = h1.merge(h2){k,v1,v2| v1+v2}
SyntaxError: (irb):6: syntax error, unexpected '|', expecting '='
h3 = h1.merge(h2){k,v1,v2| v1+v2}
                          ^
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):007:0> h3 = h1.merge(h2){|k,v1,v2| v1+v2}
=> {"a"=>2, "b"=>22, "z"=>3}
irb(main):008:0> h1 = Hash["b"=>3,"c"=>0,"a"=>1,"z"=>4, "b"=>2]
=> {"b"=>2, "c"=>0, "a"=>1, "z"=>4}
irb(main):009:0> hs = (b.uniq.sort).collect{|i| "#{i}=>0"}
NameError: undefined local variable or method `b' for main:Object
        from (irb):9
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):010:0> hs = (h1.uniq.sort).collect{|i| "#{i}=>0"}
NoMethodError: undefined method `uniq' for {"b"=>2, "c"=>0, "a"=>1, "z"=>4}:Hash
        from (irb):10
        from C:/Users/amoroney/amApps/lang/ruby/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):011:0> alist = ['z','a','b','a','c','b','a']
=> ["z", "a", "b", "a", "c", "b", "a"]
irb(main):012:0> amap = (alist.uniq.sort).collect{|i| Hash(#{i}=>0)}
irb(main):013:2* q
irb(main):014:2> amap = (alist.uniq.sort)
irb(main):015:2> amap
irb(main):016:2>